# network-detection

./: .gitignore  CHANGELOG.md  ENHANCEMENTS.md  FEATURES_BRAINSTORM.md  LICENSE  README.md  getting-started-guide.md  index.html  jsconfig.json  package-lock.json  package.json  scan_results.json  vite.config.js
.agent/rules/: rules.md
.agent/workflows/: generate-commit-message.md  review-test-coverage.md
.claude/agents/: 00-architect.md  10-rust-core-profiles.md  11-rust-core-baseline-diff.md  12-rust-core-fingerprinting.md  20-go-reports-export.md  30-ui-integration-ipc.md  40-topology-graph.md  99-qa-security.md
.github/workflows/: build.yml  ci.yml  release-please.yml
docs/: BUGS.md  FEATURES_BRAINSTORM.md  SNMP-INTEL.md  getting-started-guide.md  snmp-lab-setup-guide.md
engines/go-reports/: export.go  export_test.go  go.mod  main.go  sanitize.go  sanitize_test.go  (+2 more)
engines/rust-core/: Cargo.toml
engines/rust-core/src/: baseline.rs  diff.rs  fingerprint.rs  main.rs  models.rs  profiles.rs  topology.rs
sample/: 1-scan_results_1.8.1.json  68-scan_results_1.4.1.json
test/: arpSpoofDetector.test.js  credentialSniffer.test.js  deepScanner.test.js  dnsHarvester.test.js  main.test.js  networkConstants.test.js  nmapScanner.test.js  nmapXmlParser.test.js  passiveCapture.test.js  pcapAnalyzer.test.js  pcapExporter.test.js  reportsEngine.test.js  rogueDhcpDetector.test.js  rogueDnsDetector.test.js  rustEngine.test.js  scanner.test.js  securityAnalyzer.test.js  snmpWalker.test.js  store.test.js  topology.test.js  tsharkScanner.test.js  windowManager.test.js
(+34 files in other folders)
